sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:27: error: illegal start of simple expression
  }
  ^AlgCocktailSort1:28: error: 'while' expected but '}' found.
} 
^